tests/rosetta/out/Fortran/binary-strings.error
gfortran: exit status 1
/tmp/binary-strings.f90:97:52:

   97 |   recursive character(len=100) function fromBytes(bs) result(res)
      |                                                    1
Error: PROCEDURE attribute conflicts with INTENT attribute in ‘bs’ at (1)
/tmp/binary-strings.f90:90:24:

   90 |     if ((((idx < 0) .or. idx) >= 26)) then
      |                        1
Error: Operands of logical operator ‘.or.’ at (1) are LOGICAL(4)/INTEGER(4)
/tmp/binary-strings.f90:102:11:

  102 |       s = (s + char(bs(((i)+1))))
      |           1
Error: Operands of binary numeric operator ‘+’ at (1) are CHARACTER(100)/CHARACTER(100)
/tmp/binary-strings.f90:101:24:

  101 |     do while ((i < size(bs)))
      |                        1
Error: ‘array’ argument of ‘size’ intrinsic at (1) must be an array
/tmp/binary-strings.f90:27:2:

   27 |   c = b
      |  1
Error: Incompatible ranks 0 and 1 in assignment at (1)
/tmp/binary-strings.f90:44:21:

   44 |   print *, fromBytes(b)
      |                     1
Error: Rank mismatch in argument ‘bs’ at (1) (scalar and rank-1)
/tmp/binary-strings.f90:45:21:

   45 |   print *, fromBytes(d)
      |                     1
Error: Rank mismatch in argument ‘bs’ at (1) (scalar and rank-1)
/tmp/binary-strings.f90:48:2:

   48 |   z = (/98,105,110,97,114,121,122/)
      |  1
Error: Incompatible ranks 0 and 1 in assignment at (1)
/tmp/binary-strings.f90:49:21:

   49 |   print *, fromBytes(z)
      |                     1
Error: Expected a procedure for argument ‘bs’ at (1)
/tmp/binary-strings.f90:50:2:

   50 |   sub = b((1)+1:3)
      |  1
Error: Incompatible ranks 0 and 1 in assignment at (1)
/tmp/binary-strings.f90:51:21:

   51 |   print *, fromBytes(sub)
      |                     1
Error: Expected a procedure for argument ‘bs’ at (1)
/tmp/binary-strings.f90:67:53:

   67 |   print *, trim(fromBytes(d) // ' -> ') // fromBytes(f)
      |                                                     1
Error: Rank mismatch in argument ‘bs’ at (1) (scalar and rank-1)
/tmp/binary-strings.f90:67:26:

   67 |   print *, trim(fromBytes(d) // ' -> ') // fromBytes(f)
      |                          1
Error: Rank mismatch in argument ‘bs’ at (1) (scalar and rank-1)
/tmp/binary-strings.f90:83:21:

   83 |   print *, fromBytes(rem)
      |                     1
Error: Rank mismatch in argument ‘bs’ at (1) (scalar and rank-1)
