tests/rosetta/out/Fortran/binary-strings.f90
! Generated by Mochi compiler v0.10.28 on 2006-01-02T15:04:05Z
program binary_strings
  implicit none
  integer, dimension(6) :: b
  integer :: c
  integer, allocatable, dimension(:) :: d
  integer :: i
  integer :: z
  integer :: sub
  integer, allocatable, dimension(:) :: f
  integer, allocatable, dimension(:) :: rem
  character(len=100) :: s0
  character(len=100) :: s1
  character(len=100) :: s2
    integer, allocatable, dimension(:) :: app3
  character(len=100) :: s4
    integer :: val
      integer, allocatable, dimension(:) :: app5
  integer, allocatable, dimension(:) :: app6
    integer, allocatable, dimension(:) :: app7
    character(len=100) :: letters
    integer :: idx
    character(len=100) :: s
  b = (/98,105,110,97,114,121/)
  write(s0,'(G0)') b
  print *, s0
  c = b
  write(s1,'(G0)') c
  print *, s1
  write(s2,'(G0)') (b == c)
  print *, s2
  allocate(d(0))
  i = 0
  do while ((i < 6))
    if (allocated(app3)) deallocate(app3)
    allocate(app3(size(d)+1))
    app3(1:size(d)) = d
    app3(size(d)+1) = b(((i)+1))
    d = app3
    i = (i + 1)
  end do
  d(((1)+1)) = 97
  d(((4)+1)) = 110
  print *, fromBytes(b)
  print *, fromBytes(d)
  write(s4,'(G0)') (6 == 0)
  print *, s4
  z = (/98,105,110,97,114,121,122/)
  print *, fromBytes(z)
  sub = b((1)+1:3)
  print *, fromBytes(sub)
  allocate(f(0))
  i = 0
  do while ((i < size(d)))
    val = d(((i)+1))
    if ((val == 110)) then
      f = (/109/)
    else
      if (allocated(app5)) deallocate(app5)
      allocate(app5(size(f)+1))
      app5(1:size(f)) = f
      app5(size(f)+1) = val
      f = app5
    end if
    i = (i + 1)
  end do
  print *, trim(fromBytes(d) // ' -> ') // fromBytes(f)
  allocate(rem(0))
  if (allocated(app6)) deallocate(app6)
  allocate(app6(size(rem)+1))
  app6(1:size(rem)) = rem
  app6(size(rem)+1) = b(((0)+1))
  rem = app6
  i = 3
  do while ((i < 6))
    if (allocated(app7)) deallocate(app7)
    allocate(app7(size(rem)+1))
    app7(1:size(rem)) = rem
    app7(size(rem)+1) = b(((i)+1))
    rem = app7
    i = (i + 1)
  end do
  print *, fromBytes(rem)
  
  contains
  recursive character(len=100) function char(n) result(res)
    integer, intent(in) :: n
    letters = 'abcdefghijklmnopqrstuvwxyz'
    idx = (n - 97)
    if ((((idx < 0) .or. idx) >= 26)) then
      res = '?'
      return
    end if
    res = letters(idx+1:(idx + 1))
    return
  end function char
  recursive character(len=100) function fromBytes(bs) result(res)
    integer, intent(in) :: bs
    s = ''
    i = 0
    do while ((i < size(bs)))
      s = (s + char(bs(((i)+1))))
      i = (i + 1)
    end do
    res = s
    return
  end function fromBytes
end program binary_strings
